# is-my-laptop-ok-

./: CMakeLists.txt  README.md
data/: norm_stats.yml  system_performance_data.csv
models/: svm_model.yml
scripts/: collect-data.py
src/: monitor.cpp  train_svm.cpp
